# word_iterator

./: CMakeLists.txt
src/: main.cpp  word_iterator.hpp
tests/: iterate.cpp
